:bug: Fix z-index in Initial page loader in mobile view

--- a/src/styles/initial-page-loader/_styles.scss
+++ b/src/styles/initial-page-loader/_styles.scss
@@ -12,6 +12,7 @@
     }
     padding: unset;
     transition: background-color 0.5s 0.25s linear;
+    z-index: 9999999999;
     &.is-active {
         background: {
             color: transparent;
